pushing srver.js file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quotester_pg_express_app",
+  "name": "quotester_app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
